# nekro-plugin-weather

./: README.md  __init__.py  pyproject.toml
data/configs/: nekro-agent.yaml
tests/: __init__.py  test_weather_plugin.py
